# mathjson-solver

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  coverage-badge.md  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-app.yml  test-coverage.yml
docs/: README.md  integration-test-cases.md
src/mathjson_solver/: __init__.py  __main__.py
src/mathjsonsolver/: mathjson_solver.py
tests/: test_CumulativeProduct.py  test_TrapezoidalIntegratel.py  test_atindex.py  test_cumulative.py  test_equal.py  test_exceptions.py  test_extract_variables.py  test_findinterval.py  test_gail_model.py  test_interpolate.py  test_range.py  test_reduce_simple.py  test_scalars.py  test_sets.py  test_simple_cases.py  test_slice.py  test_with_pytest.py
