[metadata]
name = mathjson-solver
version = 1.9.1
author = Martins Mednis
author_email = mrt@mednis.info
description = Utilities for MathJSON evaluation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LongenesisLtd/mathjson-solver
project_urls = 
	Bug Tracker = https://github.com/LongenesisLtd/mathjson-solver/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

